--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 <body>
-
+	<img src="images/logoIdea8-2.0.png" id = "logo">
 <div class = "header">
 
-	<img src="images/logoIdea8-2.0.png" id = "logo" height = 70>
+	
 	<h1>Hello!</h1>
 
 	<p> welcome to idea8</p>
