--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-	<link href="css/index.css" rel="stylesheet">
+	<link href="CSS/index.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
@@ -8,7 +8,7 @@
 	<img src="images/logoIdea8-2.0.png" id = "logo">
 <div class = "header">
 
-	
+
 	<h1>Hello!</h1>
 
 	<p> welcome to idea8</p>
@@ -18,7 +18,7 @@
 	<div id = "content">
 		<a href="#"><input class="myButton" id = "but1" type="submit" value=""></a>
 		<a href="#"><input class="myButton" id = "but2" type="submit" value=""></a>
-	
+
 	<!--
 		<a href="#"><img src="images/button.png" id = "click1" height = 250 ></a>
 		<a href="#"><img src="images/button2.png" id = "click1" height = 250 ></a>
@@ -31,7 +31,7 @@
 	<div id = "heading">
 		<h2> How it works</h2>
 	</div>
-	
+
 	<img src="images/tutorial.png" id = "tut" ></a>
 
 
@@ -39,7 +39,7 @@
 
 <script>
 $('a[href*=#]:not([href=#])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') 
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
         || location.hostname == this.hostname) {
 
         var target = $(this.hash);
@@ -53,10 +53,9 @@ $('a[href*=#]:not([href=#])').click(function() {
     }
 });
 </script>
-	
-  
+
+
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </body>
 </html>
-
