--- a/Setting_Solo.html
+++ b/Setting_Solo.html
@@ -3,45 +3,60 @@
   <head>
     <title> Settings | Personal </title>
     <meta charset = "utf-8" />
-    <link rel = "stylesheet" href = "Setting_Solo.css" />
-    <link type="text/css" rel="stylesheet" href="BookmarksBar.css"/>
+    <link rel = "stylesheet" href = "CSS/Setting_Solo.css" />
     <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta name = "viewport" content = "width-device-width, initial-scale = 1.0"/>
   </head>
+  <img class="Logo" src = "./images/logoIdea8-2.0.png">
   <body class = "body">
     <header>
-      <!-- place logo here -->
     </header>
     <div>
       <h1> You are working on a personal project. </h1>
         <!-- Bookmark bar -->
         <div class="bookmarkscontainer">
-          <p>
-            <span style="color:#91688F" ><img src="./images/Settings.png"> Settings </span>
-            <span><img src="./images/WaitingRoom.png.jpg"> Waiting Room </span>
+          <p class = "roadmap" style="text-align: center; margin-bottom: 2.5%">
+            <span style="color:#34495E" ><img src="./images/Settings.png"> Settings </span>
+            <span><img src="./images/WaitingRoom.png"> Waiting Room </span>
             <span><img src="./images/Ideate.png"> Ideate </span>
             <span><img src="./images/Share.png"> Share/Feedback </span>
             <span><img src="./images/Iterate.png"> Iterate </span>
           </p>
         </div>
+
         <form>
-          <label for="text"> Your Name: </label>
+          <label for="text" id = "name"> Your Name: </label>
           <input type = "text" class = "text-line" placeholder = "Ex. Boshna Yowen"/>
         </form>
         <form>
-          <label for="text"> Name of Your Project: </label>
+          <label for="text" id = "project"> Name of Your Project: </label>
           <input type = "text" class = "text-line" placeholder = "Ex. Idea8"/>
         </form>
         <form>
-          <label for="number"> Set Your Number of Idea Panels: </label>
-          <input type="number" id="number" name="number">
+          <label for="number" id = "panels"> Set Your Number of Idea Panels: </label>
+          <input type="number" class = "text-line" placeholder = "Ex. 8">
+          <span class="field-tip">
+            <i class="material-icons" style="font-size: 20px; color: #91688F; margin-left: -19.5%">info</i>
+              <span class="tip-content" style = "margin-right: -80px; margin-bottom: -15%">We recommend 8 panels. It's a great number of ideas to start and iterate with, but not too many to block your creative flow.</span>
+          </span>
         </form>
         <form>
-          <label for="number"> Set Time per Panel: </label>
+          <label for="number" id = "time"> Set Time per Panel: </label>
           <input type = "range" id = "range" name = "range">
+          <span class="field-tip">
+            <i class="material-icons" style="font-size: 20px; color: #91688F; margin-left: 10%">info</i>
+              <span class="tip-content">We recommend 1 minute or less for each panel. This way you can put all your ideas out there without getting fixated on one idea.</span>
+          </span>
         </form>
-
+        <!-- <form>
+          <label for="number" id = "time"> Set Time per Panel: </label>
+          <div class="range-slider">
+            <input class="input-range" type="range" value="60" min="1" max="120">
+            <span class="range-value"></span>
+          </div>
+        </form> -->
         <!-- <p> Your Name: </p>
         <input type = "text" class = "text-line" placeholder= "Ex. Boshna Yowen"/>
         <p> Name of your project: </p>
@@ -53,7 +68,8 @@
           <input type="text" pattern="[0-9]*" id="age" name="age">
         </form>
         <p> Set time per panel: </p> -->
-        <button class = "start-button">Start Ideation!</button>
+        <a href = "Waitlist_Team.html"><button class = "start-button">Start Ideation!</button></a>
     </div>
+    <script src="tooltip.js"></script>
   </body>
 </html>
