--- a/Waitlist_Leader.html
+++ b/Waitlist_Leader.html
@@ -51,7 +51,7 @@
 				</table>
 			</div>
 			<br>
-			<div class="Ready_Button">Start Ideation</div>
+			<a href="drawingpage.html"><div class="Ready_Button">Start Ideation</div></a>
 			<br>
 			<center>
 				<i>If not everyone is ready, they can join later.</i>
