--- a/Waitlist_Team.html
+++ b/Waitlist_Team.html
@@ -50,7 +50,7 @@
 				</table>
 			</div>
 			<br>
-			<div class="Ready_Button">Ready to go</div>
+			<a href="drawingpage.html"><div class="Ready_Button">Ready to go</div></a>
 			<br>
 						<center>
 				<i>Waiting for leader to begin.</i>
