--- a/feedback page/leader_view.html
+++ b/feedback page/leader_view.html
@@ -23,11 +23,19 @@
 		</noscript>
     </head>
 
-    <!-- header -->
-    <header>
-      <p> IDEA8 </p> <!-- logo goes here -->
-      <h1> 4. Get feedback </h1> <!-- roadmap goes here -->
-    </header>
+    <!-- header with logo & roadmap-->
+      <img class="Logo" src="../images/logoIdea8-2.0.png">
+      <header >
+        Feedback Room
+      </header>
+      <div class="Non_Chat" style="margin-right: 10%;">
+        <div class = "roadmap">
+            <span><img src="../images/Settings.png"> Settings</span>
+            <span><img src="../images/WaitingRoom.png"> Waiting Room</span>
+            <span><img src="../images/Ideate.png"> Ideate </span>
+            <span style="color:#34495E"><img src="../images/Share.png"> Share/Feedback</span>
+            <span><img src="../images/Iterate.png"> Iterate </span>
+        </div>
 
     <body>
         <div class="container">
