--- a/feedback page/not_tommy_view.html
+++ b/feedback page/not_tommy_view.html
@@ -24,22 +24,32 @@
     </head>
 
 
-    <header>
-      <p> IDEA8 </p>
-      <h1> 4. Get feedback </h1>
-    </header>
+    <!-- header with logo & roadmap-->
+      <img class="Logo" src="../images/logoIdea8-2.0.png">
+      <header >
+        Feedback Room
+      </header>
+      <div class="Non_Chat" style="margin-right: 10%;">
+        <div class = "roadmap">
+            <span><img src="../images/Settings.png"> Settings</span>
+            <span><img src="../images/WaitingRoom.png"> Waiting Room</span>
+            <span><img src="../images/Ideate.png"> Ideate </span>
+            <span style="color:#34495E"><img src="../images/Share.png"> Share/Feedback</span>
+            <span><img src="../images/Iterate.png"> Iterate </span>
+        </div>
 
 
     <body style="margin-bottom:-5%">
 
-        <!-- center panel -->
-        <div class="preview" align="center">
+      <!-- center panel -->
+            <div class="preview" align="center" style="margin-left: 20%;">
+              <p>You are viewing:
+                <h1> Tommy <i class="fa fa-star"></i> Panel 1 </h1>
+              </p>
+              <img name="preview" src="images/potato1.jpg" alt=""style="width:50%;"/> <!--placeholder image-->
 
-          <p>You are viewing:</p>
-          <h1> Tommy Panel 1 </h1>
-          <img name="preview" src="images/potato1.jpg" alt=""/> <!--placeholder image-->
-          <style> .preview img {width: 38%; margin-left: 2%}</style>
-        </div>
+            </div>
+
         <div class="Chat_Room">
           <div class="Chat_Icon" style="font-size:24px;">
             <ul id="drop-nav">
@@ -54,7 +64,7 @@
               </li>
               <p>Chat</p>
             </div>
-          <div class="Message_Window">
+          <div class="Message_Window" style="font-size: 13px">
             <p><b>Tommy:</b>
               <br />
               Thanks for coming in, guys!
@@ -97,9 +107,9 @@
 
           </div>
 
-          <textarea class="Type_Here" placeholder="Type a message..."></textarea>
+          <textarea class="Type_Here" placeholder="Type a message..." style="margin-left:-10%"></textarea>
 
-          <div class="Send_Button"><b>Send</b></div>
+          <div class="Send_Button" style="font-size: 13px"><b>Send</b></div>
         </div>
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
