--- a/feedback page/tommys_page.html
+++ b/feedback page/tommys_page.html
@@ -24,10 +24,19 @@
     </head>
 
 
-    <header>
-      <p> IDEA8 </p>
-      <h1> 4. Get feedback </h1>
-    </header>
+    <!-- header with logo & roadmap-->
+      <img class="Logo" src="../images/logoIdea8-2.0.png">
+      <header >
+        Feedback Room
+      </header>
+      <div class="Non_Chat" style="margin-right: 10%;">
+        <div class = "roadmap">
+            <span><img src="../images/Settings.png"> Settings</span>
+            <span><img src="../images/WaitingRoom.png"> Waiting Room</span>
+            <span><img src="../images/Ideate.png"> Ideate </span>
+            <span style="color:#34495E"><img src="../images/Share.png"> Share/Feedback</span>
+            <span><img src="../images/Iterate.png"> Iterate </span>
+        </div>
 
 
     <body>
@@ -66,9 +75,11 @@
 
         <!-- center panel -->
         <div class="preview" align="center">
-          <p>You are viewing:</p>
-          <h1>Panel 1</h1>
+          <p>You are viewing:
+            <h1>Panel 1 </h1>
+          </p>
           <img name="preview" src="images/potato1.jpg" alt=""/> <!--placeholder image-->
+
         </div>
 
         <div class="yesplease">
