--- a/drawingpage-individual.html
+++ b/drawingpage-individual.html
@@ -327,10 +327,11 @@
         <img src="" id = "modal-panels">
             
         </div>
-
-            <button type="button" data-dismiss="modal"> Proceed to Feedback</button>
+        <a href="feedback/leader_view.html">
+            <button type="button"> Proceed to Feedback</button>
+            </a>
         </div>
-
+ 
       </div>
      
     </div>
