--- a/feedback/what is your name page/your_name_page.html
+++ b/feedback/what is your name page/your_name_page.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class="container">
 			<header class="codrops-header">
-				<h1 style="text-align: center">Welcome to idea8! <span>Tommy has invited you to give feedback.</span></h1>
+				<h1 style="text-align: center; font-size: 64px; margin-bottom:-10%">Welcome to idea8! <span>Tommy has invited you to give feedback.</span></h1>
 			</header>
 			<section>
 				<form id="theForm" class="simform" autocomplete="off">
