--- a/Setting_Solo.html
+++ b/Setting_Solo.html
@@ -50,26 +50,8 @@
               <span class="tip-content">We recommend 1 minute or less for each panel. This way you can put all your ideas out there without getting fixated on one idea.</span>
           </span>
         </form>
-        <!-- <form>
-          <label for="number" id = "time"> Set Time per Panel: </label>
-          <div class="range-slider">
-            <input class="input-range" type="range" value="60" min="1" max="120">
-            <span class="range-value"></span>
-          </div>
-        </form> -->
-        <!-- <p> Your Name: </p>
-        <input type = "text" class = "text-line" placeholder= "Ex. Boshna Yowen"/>
-        <p> Name of your project: </p>
-        <input type = "text" class = "text-line" placeholder = "Ex. Idea8"/>
-        <p> Set your number of idea panels: </p>
-        <input type = "range" class = "number-range">
-        <form>
-          <label for="">Enter your age</label>
-          <input type="text" pattern="[0-9]*" id="age" name="age">
-        </form>
-        <p> Set time per panel: </p> -->
         <a href = "Waitlist_Team.html"><button class = "start-button">Start Ideation!</button></a>
     </div>
-    <script src="tooltip.js"></script>
+    <script type="text/javascript" src="./js/tooltip.js"></script>
   </body>
 </html>
