--- a/Waitlist_Team.html
+++ b/Waitlist_Team.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 		 <link rel="stylesheet" type="text/css" href="./CSS/Waitlist.css">
@@ -29,28 +30,28 @@
 				<table>
 				  <tr>
 				    <td id="tableHead"><b>Team Member</b></td>
-				    <td id="tableHead"><b>Ready</b></td>		
+				    <td id="tableHead"><b>Ready</b></td>
 				  </tr>
 				  <tr>
-				    <td><div id="tableEntry">&#9733;Leader</div></td>	
+				    <td><div id="tableEntry">&#9733;Leader</div></td>
 				    <td>&#10687;</td>
 				  </tr>
 				  <tr>
 				    <td><div id="tableEntry">Kathy</div></td>
-				    <td>&#9702;</td>		
+				    <td>&#9702;</td>
 				  </tr>
 				  <tr>
 				    <td><div id="tableEntry">Boshna</div></td>
-				    <td>&#10687;</td>		
+				    <td>&#10687;</td>
 				  </tr>
 				  <tr>
 				    <td><div id="tableEntry">Fairy</div></td>
-				    <td>&#9702;</td>		
+				    <td>&#9702;</td>
 				  </tr>
 				</table>
 			</div>
 			<br>
-			<a href="drawingpage.html"><div class="Ready_Button">Ready to go</div></a>
+			<a href="drawingpage-individual.html"><div class="Ready_Button">Ready to go</div></a>
 			<br>
 						<center>
 				<i>Waiting for leader to begin.</i>
@@ -65,7 +66,7 @@
                     <li><a href="#"><i class="fa fa-circle" style="font-size:12px; color: green; text-align:left;"></i> Tommy <i class="fa fa-star"></i></i></a></li>
                     <li><a href="#"><i class="fa fa-circle" style="font-size:12px; color: green; text-align:left;"></i> Carlton</a></li>
                     <li><a href="#"><i class="fa fa-circle-o" style="font-size:12px; text-align:left;"></i> Tanysha</a></li>
-                   
+
                   </ul>
               </li>
               <p>Chat</p>
