--- a/feedback page/leader_view.html
+++ b/feedback page/leader_view.html
@@ -40,7 +40,7 @@
     <body>
         <div class="container">
             <div class="wrapper">
-                <div id="st-accordion" class="st-accordion"> <!-- left dropdown side panels-->
+                <div id="st-accordion" class="st-accordion" style="margin-top: 2.6em;"> <!-- left dropdown side panels-->
                     <ul>
                         <li>
                             <a href="#">Tommy<span class="st-arrow"> </span></a>
