--- a/feedback/tommys_page.html
+++ b/feedback/tommys_page.html
@@ -101,7 +101,7 @@
                     <a href="saved_feedback.pdf" download="[Project Name] Feedback">Yes</a>
                   </div>
                   <div class="yesplease yestext" style="margin-top:3%; float:left">
-                    <a href="#">No</a>
+                    <a href="../Restart.html">No</a>
                   <div>
                 </p>
               </center>
