--- a/Setting_Solo.html
+++ b/Setting_Solo.html
@@ -50,7 +50,7 @@
               <span class="tip-content">We recommend 1 minute or less for each panel. This way you can put all your ideas out there without getting fixated on one idea.</span>
           </span>
         </form>
-        <a href = "Waitlist_Team.html"><button class = "start-button">Start Ideation!</button></a>
+        <a href = "drawingpage-individual.html"><button class = "start-button">Start Ideation!</button></a>
     </div>
     <script type="text/javascript" src="./js/tooltip.js"></script>
   </body>
