--- a/drawingpage-individual.html
+++ b/drawingpage-individual.html
@@ -46,7 +46,7 @@
     <div class="header-holder">
  	
         <!--PLACEHOLDER for LOGO top left corner space -->
-        <img id="logo-placeholder" class="Logo"src="./images/logoidea8-2.0.png">
+        <img id="logo-placeholder" class="Logo"src="./images/logoIdea8-2.0.png">
 
         <!--Header for create page -->
         <h1 class="title-text"> You are ideating </h1>
