--- a/drawingpage-individual.html
+++ b/drawingpage-individual.html
@@ -99,11 +99,11 @@
         <div class="create-bar">
 
           <p>
-            <span style="color:#dcc6e0" ><img src="./content/Settings.png"> Settings </span>
+            <span style="color:#dcc6e0" ><img src="./content/settings.png"> Settings </span>
             <span style="color:#dcc6e0"><img src="./content/WaitingRoom.png"> Waiting Room </span>
             <span style="color:#91688F" ><img src="./content/Ideate.png"> Ideate </span>
             <span style="color:#DCC6e0" ><img src="./content/Share.png"> Share/Feedback </span>
-            <span style="color:#dcc6e0" ><img src="./content/Iterate.png"> Iterate </span>
+            <span style="color:#dcc6e0" ><img src="./content/iterate.png"> Iterate </span>
           </p>
        
      
